all builds, releases, queue pages

--- a/config/api/controllers.yaml
+++ b/config/api/controllers.yaml
@@ -122,7 +122,7 @@ services:
             - '@problem.renderer'
 
     ####################################################################################################################
-    # PUSH CONTROLLERS
+    # Release CONTROLLERS
     ####################################################################################################################
 
     release.api:
