--- a/config/api-writes/controllers.yaml
+++ b/config/api-writes/controllers.yaml
@@ -5,7 +5,7 @@ services:
         arguments:
             - '@doctrine.em'
             - '@build.start.validator'
-            - '@push.start.validator'
+            - '@release.start.validator'
             - '@api.response_formatter'
             - '@api_normalizer.build'
             - '@problem.renderer'
@@ -14,6 +14,6 @@ services:
         class: 'Hal\UI\Controllers\API\Push\DeployController'
         arguments:
             - '@doctrine.em'
-            - '@push.start.validator'
+            - '@release.start.validator'
             - '@api.response_formatter'
             - '@problem.renderer'
