--- a/config/ui/routes.yaml
+++ b/config/ui/routes.yaml
@@ -393,6 +393,11 @@ parameters:
             route: '/builds/{build:%r.build%}/release'
             stack: ['middleware.signed_in', 'middleware.require_entity', 'release.start.middleware', 'release.start.page']
 
+        release.start.global:
+            method: ['GET']
+            route: '/builds/{build:%r.build%}/release/global'
+            stack: ['middleware.signed_in', 'middleware.require_entity', 'release.start.global.page']
+
         ################################################################################################################
         # ADMIN ROUTES
         ################################################################################################################
