--- a/config/ui/services.yaml
+++ b/config/ui/services.yaml
@@ -42,12 +42,12 @@ services:
         arguments:
             - '@doctrine.em'
             - '@github'
-            - '@permissions'
+            - '@service.authorization'
     release.start.validator:
         class: 'Hal\UI\Validator\ReleaseValidator'
         arguments:
             - '@doctrine.em'
-            - '@permissions'
+            - '@service.authorization'
 
     group.validator:
         class: 'Hal\UI\Validator\GroupValidator'
