--- a/config/ui/routes.yaml
+++ b/config/ui/routes.yaml
@@ -391,12 +391,7 @@ parameters:
         release.start:
             method: ['GET', 'POST']
             route: '/builds/{build:%r.build%}/release'
-            stack: ['middleware.signed_in', 'middleware.require_entity', 'release.start.middleware', 'release.start.page']
-
-        release.start.global:
-            method: ['GET']
-            route: '/builds/{build:%r.build%}/release/global'
-            stack: ['middleware.signed_in', 'middleware.require_entity', 'release.start.global.page']
+            stack: ['middleware.signed_in', 'middleware.require_entity', 'deploy.select_environment.middleware', 'deploy.middleware', 'release.start.page']
 
         ################################################################################################################
         # ADMIN ROUTES
