Remove panthor adapters and use additions from panthor 3.2

--- a/config/.env.dev.dist
+++ b/config/.env.dev.dist
@@ -1,6 +1,6 @@
 # hal
 ENVIRONMENT='dev'
-HAL_ROOT="$(cd .. && pwd)"
+PANTHOR_APPROOT="$(cd .. && pwd)"
 HAL_DEBUG_ON='0'
 HAL_TIMEZONE='America/Detroit'
 HAL_APPLICATION_ID='200947'
@@ -16,15 +16,15 @@ HAL_DB_NAME='hal'
 HAL_DB_DRIVER='pdo_pgsql'
 
 HAL_ORM_DEVMODE_ON='1'
-HAL_ORM_PROXY_DIR="${HAL_ROOT}/.doctrine"
-HAL_ORM_CONFIG_DIR="${HAL_ROOT}/vendor/hal/hal-core/config/doctrine"
+HAL_ORM_PROXY_DIR="${PANTHOR_APPROOT}/.doctrine"
+HAL_ORM_CONFIG_DIR="${PANTHOR_APPROOT}/vendor/hal/hal-core/config/doctrine"
 # (memory, redis)
 HAL_ORM_CACHE='memory'
 
 # mcp logger
 MCP_LOGGER_SERVICE='errorlog'
 MCP_LOGGER_ERRORLOG_TYPE='FILE'
-MCP_LOGGER_ERRORLOG_FILE="${HAL_ROOT}/.error.log"
+MCP_LOGGER_ERRORLOG_FILE="${PANTHOR_APPROOT}/.error.log"
 MCP_LOGGER_SERIALIZER='line'
 MCP_LOGGER_SERIALIZER_LINE_FORMAT="
 >>> %message%
@@ -34,14 +34,12 @@ MCP_LOGGER_SERIALIZER_LINE_FORMAT="
 # panthor
 HAL_ROUTES_DISABLE_CACHE_ON='1'
 HAL_LOG_STACKTRACES_ON='1'
+PANTHOR_DI_DISABLE_CACHE_ON='1'
 
 # application
 HAL_APPLICATION_VERSION_MAJOR='3'
 HAL_APPLICATION_VERSION_MINOR='0'
 HAL_APPLICATION_SHA=''
-
-# symfony
-HAL_DI_DISABLE_CACHE_ON='1'
 
 # twig
 HAL_DEBUG_TWIG_ON='1'
