--- a/config/.env.prod.dist
+++ b/config/.env.prod.dist
@@ -1,6 +1,6 @@
 # hal
 ENVIRONMENT='prod'
-HAL_ROOT="../"
+PANTHOR_APPROOT="../"
 HAL_DEBUG_ON='0'
 HAL_TIMEZONE='America/Detroit'
 HAL_APPLICATION_ID='200947'
@@ -16,8 +16,8 @@ HAL_DB_NAME='hal'
 HAL_DB_DRIVER='pdo_pgsql'
 
 HAL_ORM_DEVMODE_ON='0'
-HAL_ORM_PROXY_DIR="${HAL_ROOT}/.doctrine"
-HAL_ORM_CONFIG_DIR="${HAL_ROOT}/vendor/hal/hal-core/config/doctrine"
+HAL_ORM_PROXY_DIR="${PANTHOR_APPROOT}/.doctrine"
+HAL_ORM_CONFIG_DIR="${PANTHOR_APPROOT}/vendor/hal/hal-core/config/doctrine"
 # (memory, redis)
 HAL_ORM_CACHE='redis'
 
@@ -29,14 +29,12 @@ MCP_LOGGER_SYSLOG_IDENT="hal-${HAL_APPLICATION_ID}"
 # panthor
 HAL_ROUTES_DISABLE_CACHE_ON='0'
 HAL_LOG_STACKTRACES_ON='0'
+PANTHOR_DI_DISABLE_CACHE_ON='0'
 
 # application
 HAL_APPLICATION_VERSION_MAJOR='3'
 HAL_APPLICATION_VERSION_MINOR='0'
 #HAL_APPLICATION_SHA=''
-
-# symfony
-HAL_DI_DISABLE_CACHE_ON='0'
 
 # twig
 HAL_DEBUG_TWIG_ON='0'
