Update routes cache location

--- a/config/parameters.yaml
+++ b/config/parameters.yaml
@@ -40,6 +40,7 @@ parameters:
     # panthor
     ############################################################################
     debug: '%env(HAL_DEBUG_ON)%'
+    routes.cached: 'config/routes.cached.php'
     routes.cache_disabled: '%env(HAL_ROUTES_DISABLE_CACHE_ON)%'
     global_middleware:
         - 'slim.global_middleware.logger'
