--- a/config/ui/controllers.yaml
+++ b/config/ui/controllers.yaml
@@ -605,6 +605,17 @@ services:
         parent: 'twig.template'
         calls: [['setTemplate', ['release/rollback.twig']]]
 
+    releases.list.page:
+        class: 'Hal\UI\Controllers\Release\ReleasesListController'
+        arguments:
+            - '@releases.list.twig'
+            - '@doctrine.em'
+            - '@notFoundHandler'
+    releases.list.twig:
+        parent: 'twig.template'
+        calls: [['setTemplate', ['release/releases.list.twig']]]
+
+
     ####################################################################################################################
     # ADMIN CONTROLLERS
     ####################################################################################################################
