--- a/config/ui/routes.yaml
+++ b/config/ui/routes.yaml
@@ -393,6 +393,17 @@ parameters:
             route: '/builds/{build:%r.build%}/release'
             stack: ['middleware.signed_in', 'middleware.require_entity', 'deploy.select_environment.middleware', 'deploy.middleware', 'release.start.page']
 
+        releases.list.page1:
+            method: 'GET'
+            route: '/releases'
+            stack: ['middleware.signed_in', 'releases.list.page']
+
+        releases.list:
+            method: 'GET'
+            route: '/releases/page/{page:%r.digit%}'
+            stack: ['middleware.signed_in', 'releases.list.page']
+
+
         ################################################################################################################
         # ADMIN ROUTES
         ################################################################################################################
